# fin-pathfinder

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted--test-forecast-cash-flow-basic-def-test-forecast--1736179992743.txt  Pasted--test-forecast-cash-flow-basic-def-test-forecast-cash-flow-basic--1736182682424.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-Fina-1736184251642.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-Fina-1736204252899.txt  Pasted-INFO-172-31-196-62-55872-GET-HTTP-1-1-200-OK-INFO-172-31-196-62-55272-GET-docs-H-1736186894929.txt  Pasted-from-fastapi-import-FastAPI-HTTPException-from-pydantic-import-BaseModel-Field-validator-from-dat-1736176856630.txt
components/: scenarios.py
models/: cash_flow.py  schemas.py
tests/: test_calculations.py  test_endpoints.py
utils/: calculations.py  cash_flow.py  constraints.py  exceptions.py  validation.py
