[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pytest = "^8.1.1"
httpx = "^0.27.0"
databases = "^0.9.0"
fastapi = "^0.112.0"
uvicorn = "0.23.2"
pydantic = "^2.9.2"
numpy = "^2.1.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
reportlab = "^4.2.5"
sqlalchemy = "^2.0.36"
python-multipart = "^0.0.9"
aiosqlite = "^0.19.0"
consultor = "^0.2.0"
slowapi = "^0.1.9"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]